stateDiagram-v2
    [*] --> IDLE
    IDLE --> LegacySyncing: setfsmstate legacysyncing
    LegacySyncing --> Running: Initial sync complete
    Running --> CatchingBlocks: After downtime
    CatchingBlocks --> Running: Sync complete

    note right of LegacySyncing
        Syncs from traditional BSV node
    end note

    note right of Running
        Can sync from other Teranodes
    end note
